2001-12-15  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* config-client.ht: Mention that tmda-sendmail will use the
	address in the "From" header created by the MUA as the basis for
	the tagged address.

2001-12-14  Jason R. Mastaler  <jason@mastaler.com>

	* history.ht (Links): Add a timeline for the non-qmail support.
	
2001-12-14  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* features.ht (Links): Mention Sendmail support.

	* requirements.ht (Links): Ditto.

	* config-server.ht: Add Sendmail configuration information.  Set
	the necessary environment variables from the X-Envelope* headers
	before passing the message to tmda-filter.

	* config-pre.ht: Add Sendmail configuration information.  Focus on
	using procmail as the local mailer, and then adding X-Envelope-To
	and X-Envelope-From headers to all incoming messages.

2001-12-13  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* config-server.ht: Move success reporting information onto the
	"Installation" page.

2001-12-11  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* resources.ht (Links): Link to Vincent Danen's "Controlling SPAM
	under Mandrake Linux, Part 2".
	
2001-12-07  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* results.ht (Links): Add testimonial from Vincent Danen
	<20011207121439.B10750@mandrakesoft.com>.
	
2001-12-06  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* faq.ht (Links): Update link to Einar Bordewich's
	smtpd-auth/vpopmail/qmailadmin tutorial.

2001-12-04  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* config-server.ht (HREF): Add jason-tmda example.

	* index.ht (Links): Move philosophical bit to the end of the page,
	and also add bulk-mail characteristics to the assumptions section.
	
	* download.ht (Links): Remove stale mirrors.

2001-12-02  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* features.ht (Links): Add CDB support.

	* config-filter.ht: Document CDB support.
