@@ -278,8 +278,9 @@ to do final delivery:
 <blockquote><pre>
 
 # Set the necessary environment variables.
-SENDER=`formail -x X-Envelope-From | sed 's/^[ ]*//'`
-RECIPIENT=`formail -x X-Envelope-To | sed 's/^[ ]*//'`
+# Remove the angle brackets and leading whitespace.
+SENDER=`formail -x X-Envelope-From | sed 's/[<>]//g;s/^[ ]*//'`
+RECIPIENT=`formail -x X-Envelope-To | sed 's/[<>]//g;s/^[ ]*//'`
 EXTENSION="$1"
 
 # Run the message through tmda-filter.
